test/data/resolver/valid/aggregate_with_expr_residual.cypher
MATCH (n:Person) RETURN 1 + count(n)
