test/data/resolver/invalid/set_labels_undeclared.cypher
MATCH (n:Person) SET n:Nonexistent RETURN n
